# MemChorus

./: .gitignore  .pre-commit-config.yaml  CHERRYPICK_NOTE.md  DEVELOPMENT_SUMMARY.md  FINAL_TASK_COMPLETION_SUMMARY.md  GRACEFUL_DEGRADATION.md  IMPLEMENTATION.md  LICENSE  MemChorus-Philosophy.md  MemChorus-Requirements.md  MemChorus-Spec.md  Optimization.md  QA-AUDIT-v1.1.0.md  README.md  SKILL.md  TESTING.md  VERIFICATION.md  example_memchorus_usage.py  example_usage.py  memchorus.py  memchorus_hermes_source.py  pytest.ini  setup.py  setup_dev.sh  test_graceful_degradation.py  test_hermes_source.py  test_imports.py  test_memchorus.py  verify_mempalace_impl.py
benchmarks/: baseline.json  comparison_report.json  post_integ.json
docs/: BENCHMARKS.md  ObsidianVaultMemorySource-Design.md  integration-contract-spec.md  memory-lifecycle-design.md
src/: pyproject.toml
src/memchorus/: __init__.py  _memchorus_core.py  auto_bootstrap.py  auto_lifecycle_engines.py  auto_recall_engine.py  auto_storage_engine.py  behavioral_trigger.py  enforcement_manager.py  hermes_memory_source.py  hooks.py  lifecycle_eviction.py  lifecycle_manager.py  lifecycle_merge.py  lifecycle_retention.py  memory_source.py  mempalace_memory_source.py  orchestrator.py  orientation.py  relevance_engine.py
src/memchorus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/memchorus/feedback_loop/: __init__.py  detector.py  engine.py  escalation.py  integration.py  loader.py  schema_v1.py
src/tests/: test_behavioral_trigger_regression.py
tests/: _behavioral_child.py  (+64 more)
(+12 files in other folders)
